<resources>
    <string name="app_name">山寨微信</string>
    <string name="one">微信</string>
    <string name="two">通讯录</string>
    <string name="three">发现</string>
    <string name="four">我</string>
    <string name="weixing">微信</string>
    <string name="jia">＋</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">订阅号</string>
    <string name="chat">微信</string>
    <string name="wechat_id">微信号</string>
    <string name="my_posts">支付</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_bag">卡包</string>
    <string name="expression2">表情</string>
    <string name="settings">设置</string>
    <string name="moments">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shake2">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="games">游戏</string>
    <string name="search">搜索</string>
    <string name="password">密码</string>
    <string name="tab_weiXin">微信</string>
    <string name="tab_friend">通信录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_money">微信支付</string>
</resources>

