<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="none">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
 <View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1.0dip" />
	    <RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:id="@+id/view_user"
				android:layout_marginTop="10dp">
				<ImageView
					android:id="@+id/head"
					android:layout_marginRight="10dp"
					android:layout_marginLeft="10dp"
					android:layout_width="80.0dip"
					android:layout_height="80.0dip"
					android:src="@drawable/ic_launcher" />
				<TextView
					android:textSize="18.0dip"
					android:id="@+id/tvname1"
					android:layout_marginTop="20dp"
					android:layout_toRightOf="@+id/head"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/>
					<TextView
					android:id="@+id/tvmsg1"
					android:textSize="14.0dip"
					style="@style/txt_ContextStyle1"
					android:layout_marginTop="10dp"
					android:layout_below="@+id/tvname1"
					android:layout_toRightOf="@+id/head"
					 />

					<ImageView
					android:layout_marginRight="15dp"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_erweima" />

					  <ImageView
                    android:id="@+id/iv_sex"
                    android:layout_toRightOf="@+id/tvname1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
					android:layout_marginTop="22dp"
                    android:layout_marginLeft="5dp"
						  android:contentDescription="TODO" />
			</RelativeLayout>
			<View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1.0dip" />

		
		<TextView
					android:id="@+id/txt_album"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_me_card"
					android:drawableRight="@drawable/right"
					android:text="@string/my_posts" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />

		<TextView
					android:id="@+id/txt_collect"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_me_collect"
					android:drawableRight="@drawable/right"
					android:text="@string/collection" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
		
		<TextView
					android:id="@+id/txt_money"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_me_money"
					android:drawableRight="@drawable/right"
					android:text="@string/wallet" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
		<TextView
					android:id="@+id/txt_card"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_me_card"
					android:drawableRight="@drawable/right"
					android:text="@string/card_bag" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
		
		
		<TextView
					android:id="@+id/txt_smail"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_de_nearby"
					android:drawableRight="@drawable/right"
					android:text="@string/expression2" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
		 
		<TextView
					android:id="@+id/txt_setting"
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="10dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_me_setting"
					android:drawableRight="@drawable/right"
					android:text="@string/settings" />
		<View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1.0dip" />
	</LinearLayout>
	</ScrollView>
	<TextView
		android:id="@+id/textview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
</LinearLayout>