<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >

    <!-- 普通底部导航 -->

     <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/re_weixin1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >
 <RelativeLayout
     android:layout_width="60dp"
     android:gravity="center"
                android:layout_centerHorizontal="true"
     android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ib_weixin"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_weixin" />

            <TextView
                android:id="@+id/txt_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_weixin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/one"
                android:textColor="#9A9A9A"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/unread_msg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/tab_menu_one"
                android:gravity="center"
                android:text="7"
                android:visibility="gone"
                android:layout_marginRight="8dp"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_contact_list1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >
<RelativeLayout
     android:layout_width="60dp"
     android:gravity="center"
                android:layout_centerHorizontal="true"
     android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ib_contact_list"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_contact_list" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_contact_list"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/two"
                android:textColor="#9A9A9A"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/unread_address_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/tab_menu_two"
                android:gravity="center"
                android:layout_marginRight="8dp"
                android:text="7"
                android:visibility="gone"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </RelativeLayout>
      </RelativeLayout>
      
        <RelativeLayout
            android:id="@+id/re_find1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >
<RelativeLayout
     android:layout_width="60dp"
     android:gravity="center"
                android:layout_centerHorizontal="true"
     android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ib_find"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_find" />

            <TextView
                android:id="@+id/txt_better"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_find"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/three"
                android:textColor="#9A9A9A"
                android:textSize="12sp" />
              <TextView
                android:id="@+id/unread_find_number"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text=""
                android:visibility="visible"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </RelativeLayout>     <!--android:background="@drawable/tab_menu_three"-->
 </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_profile1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >

            <ImageView
                android:id="@+id/ib_profile"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_profile" />

            <TextView
                android:id="@+id/txt_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/four"
                android:textColor="#9A9A9A"
                android:textSize="12sp" />
        </RelativeLayout>
            </LinearLayout>
    </LinearLayout>